[tool.poetry]
name = "myst-examples"
version = "0.1.0"
description = ""
authors = ["Andres Ladino <aladinoster@gmail.com>"]
readme = "README.md"
packages = [{include = "myst_examples"}]

[tool.poetry.dependencies]
python = "^3.11"
jupyterlab = "^3.6.3"
myst-parser = "^1.0.0"
jupyterlab-myst = "^1.1.3"
jupytext = "^1.14.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
